feat: Implement Network Layer, Login Repository, and Enhance Login Functionality
This commit introduces a network layer, a Login repository, and enhances the Login functionality.

-   Added `MoneyGuardClientApiService` for defining API endpoints.
-   Implemented `NetworkUtils` for creating Retrofit client instances with logging.
-   Created `LoginRepository` and `LoginRepositoryImpl` for handling login operations and network requests.
-   Added `ClientSessionResponse` data class for handling the login response.
-   Updated `LoginViewModel` to utilize `LoginRepository` for login logic, including network calls and state updates.
-   Enhanced `LoginState` to include `sessionId` and to manage loading and error states effectively.
-   Modified `build.gradle.kts` to include OkHttp3, Retrofit, and Gson dependencies for network operations.
- Implemented API call for the login feature.
- Implemented the Login process based on `LoginRepository`.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,9 @@ activityCompose = "1.10.1"
 composeBom = "2024.04.01"
 navigationCompose = "2.8.9"
 serializationVersion = "2.0.21"
+okhttpVersion = "4.12.0"
+retrofitVersion = "2.11.0"
+gsonVersion = "2.13.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -29,6 +32,12 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
+okhttp3 = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttpVersion" }
+okhttp3-logging = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttpVersion" }
+retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofitVersion" }
+gson = { group = "com.google.code.gson", name = "gson", version.ref = "gsonVersion"}
+gson-converter = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofitVersion"}
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
