--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,8 +14,10 @@ serializationVersion = "2.0.21"
 okhttpVersion = "4.12.0"
 retrofitVersion = "2.11.0"
 gsonVersion = "2.13.0"
+androidJoda = "2.13.1"
 
 [libraries]
+android-joda = { module = "net.danlew:android.joda", version.ref = "androidJoda" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
